welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:24: error: type mismatch;
 found   : Unit
 required: Int
	sol = suite(num);
            ^